--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peom",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -15,7 +15,7 @@
     "body-parser": "^2.2.0",
     "cohere-ai": "^7.17.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "node-cron": "^4.0.7",
     "nodemailer": "^7.0.3",
     "twilio": "^5.6.1"
